--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -20,4 +20,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: ubuntu
-          path: app/build/outputs/apk/
+          path: app/build/outputs/apk/prod/release/
