--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,10 @@ android {
     // ndkVersion "21.3.6528147"
     // buildToolsVersion "29.0.3"
 
+    lintOptions {
+        abortOnError false
+    }
+
     defaultConfig {
         applicationId "com.qiyutech.tbk"
         minSdkVersion 21
