--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ android {
     // ndkVersion "21.3.6528147"
     // buildToolsVersion "29.0.3"
 
+    // todo 最好移除掉
+    // 当前 lint 有假报告
     lintOptions {
         abortOnError false
     }
