--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,12 @@ buildscript {
         mavenCentral()
         maven {
             url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
+            allowInsecureProtocol = true
         }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -29,6 +30,7 @@ allprojects {
         mavenCentral()
         maven {
             url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
+            allowInsecureProtocol = true
         }
 
         // https://www.jianshu.com/p/5f0edc95a398
