--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,16 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven {
             url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
+            allowInsecureProtocol = true
         }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,8 +29,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven {
             url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
+            allowInsecureProtocol = true
         }
 
         // https://www.jianshu.com/p/5f0edc95a398
